# astrobot

./: .env.example  .gitattributes  .gitignore  ACCESS.md  Caddyfile  DEPLOYMENT.md  Dockerfile  MAX_MIGRATION_PLAN.md  Makefile  alembic.ini  docker-compose.max.yml  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/workflows/: deploy.yml  test.yml
ops/: prometheus.yml
ops/grafana/dashboards/: astrobot.json  resources.json
ops/grafana/provisioning/dashboards/: dashboards.yml
prototype_max/: bot.py
scripts/: bootstrap-server.sh
src/astrobot/: account.py  alerts.py  config.py  gender.py  limits.py  logging_setup.py  lunar.py  main.py  metrics.py  redis_client.py  referral.py  scheduler.py  tarot.py
src/astrobot/astrology/: chart.py  geocoding.py  rendering.py  ru.py  serializer.py  synastry.py  transits.py  types.py
src/astrobot/bot/: dispatcher.py  errors.py  formatting.py  keyboards.py  max_dispatcher.py  middlewares.py  responses.py  states.py  utils.py
src/astrobot/bot/handlers/: about.py  broadcast.py  compatibility.py  fallback.py  favorites.py  horoscope.py  legal.py  menu.py  natal.py  onboarding.py  payment.py  profile.py  question.py  response_toggle.py  support.py  tarot.py
src/astrobot/bot/platform/: __init__.py  base.py  max.py  telegram.py
src/astrobot/db/: models.py  session.py
src/astrobot/db/migrations/: env.py
src/astrobot/db/migrations/versions/: 0001_initial.py  0002_brief_full.py  0003_natal_cache_message_ids.py  0004_premium_until.py  0005_horoscope_cache.py  0006_pre_launch.py  0007_user_profile.py  0008_natal_regen_bonus.py  0009_push_settings.py  0010_payments.py  0011_payment_refund.py  0012_premium_reminder.py  0013_support_tickets.py  0014_questions_reset_at.py  0015_free_questions_balance.py  0016_premium_questions_used.py  0017_payment_cancel_reason.py  0018_user_followup_sent_at.py  0019_user_excluded_from_stats.py  0020_payment_telegram_charge_id.py  0021_subscriptions.py  0022_broadcasts.py  0023_clear_invalid_names.py  0024_broadcast_animation_upload.py  0025_user_username.py  0026_followup_config.py  0027_free_questions_5.py
src/astrobot/legal/: disclaimer.py  privacy.py  terms.py
src/astrobot/llm/: client.py  prompts.py
src/astrobot/payments/: catalog.py  service.py  yookassa.py
src/astrobot/safety/: crisis.py
src/astrobot/web/: admin.py  app.py
src/astrobot/web/admin_static/: astra.css
src/astrobot/web/routes/: broadcasts.py  health.py  metrics.py  payments.py  stats.py  telegram.py
tests/: test_broadcasts.py  test_chart.py  test_crisis.py  test_dispatcher_adapter.py  test_gender.py  test_limits.py  test_lunar.py  test_payments.py  test_referral.py  test_subscriptions.py  test_tarot.py
