[project]
name = "astrobot"
version = "0.1.0"
description = "Telegram astrology bot powered by LLM"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.13",
    "alembic>=1.13",
    "asyncpg>=0.29",
    "cairosvg>=2.7",
    "fastapi>=0.115",
    "geopy>=2.4",
    "kerykeion>=4.21",
    "openai>=1.40",
    "pydantic-settings>=2.5",
    "pillow>=10.0",
    "prometheus-client>=0.21",
    "redis>=5.0",
    "sqladmin>=0.20",
    "itsdangerous>=2.2",
    "sqlalchemy[asyncio]>=2.0",
    "structlog>=24.4",
    "timezonefinder>=6.5",
    "uvicorn[standard]>=0.32",
]

[dependency-groups]
dev = [
    "mypy>=1.13",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/astrobot"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC", "SIM", "RUF"]
# RUF001/002/003 — ambiguous unicode chars; we intentionally use Cyrillic.
ignore = ["E501", "RUF001", "RUF002", "RUF003"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true
